public enum Genre {

        HOUSE,
        TECHNO,
         HIPHOP,
        JAZZ,
         ROCK

}
