@startuml

enum Genre {
    HOUSE
    TECHNO
    HIPHOP
    JAZZ
    ROCK
}

class Festival {
    -stages: List<Stage>
    +startSession(): void
    +endSession(): void
    +addStage(): void
    +addConcert(): void
    +addArtist(): void
    +displayStages(): void
    +displayConcerts(): void
    +displayArtists(): void
    -createStages(String[]): void
    -createConcerts(String[]): void
    -createArtists(String[]): void
    -saveStages(): void
    -saveConcerts(): void
    -saveArtists(): void
    -nextStageId(): int
    -nextConcertId(): int
    -nextArtistId(): int
}

class Stage {
    +id: int
    +name: String
    +capacity: int
    -concerts: List<Concert>
    +addConcert(int, String, LocalDate, LocalTime, Genre): void
    +displayConcerts(): void
    +getConcerts(): List<Concert>
}

class Concert {
    +id: int
    +name: String
    +date: LocalDate
    +time: LocalTime
    +genre: Genre
    -artists: List<Artist>
    +addArtist(int, String, String): void
    +displayArtists(): void
    +getArtists(): List<Artist>
}

class Artist {
    +id: int
    +name: String
    +nationality: String
}

Festival *-- Stage
Stage *-- Concert
Concert *-- Artist
Concert --> Genre

@enduml